# logloglog

./: .gitignore  Makefile  README.md  pyproject.toml
demos/: textual_demo.py
examples/: basic_usage.py
scripts/: clean.sh  coverage.sh  log_log_log.sh  profile_indexing.py  test.sh
src/biglog/: __init__.py  array.py  biglog.py  index.py  logview.py  wraptree.py
src/logloglog/: __init__.py  cache.py  index.py  line_index.py  log_file.py  logloglog.py  logview.py  wraptree.py
src/logloglog/core/: array.py
src/logloglog/file/: loglist.py  tail.py
src/logloglog/tools/: stream_logs.py
src/logloglog/ui/textual/: log_widget.py
tests/: test_array.py  test_biglog.py  test_index.py  test_logview.py  test_wraptree.py
tests/unit/: test_array.py  test_biglog.py  test_cache.py  test_index.py  test_line_index.py  test_logloglog.py  test_logview.py  test_widthview.py  test_wraptree.py
