[project]
name = "biglog"
description = "Efficient scrollback indexing for large log files with terminal word wrapping"
version = "0.1.0"
authors = [
    { name = "Random Hacker", email = "no@dev.null" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["logging", "terminal", "scrollback", "indexing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Topic :: Terminals",
]

dependencies = [
    "wcwidth>=0.2.5",
    "platformdirs>=3.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
